# journal_scraper

./: .gitignore  Cancer proteome and biomarker discovery_2025-11-17_-_2025-11-24.json  README.md  app.py  journal_scraper.db  launch_app.sh  pyproject.toml  run_weekly_search.bat  run_weekly_search.sh
2025-11-20_-_2025-11-24/: Cancer_proteome_and_biomarker_discovery.json
blueprints/howto/: routes.py
blueprints/keyword_tracker/: __init__.py
blueprints/settings/: routes.py
blueprints/viewer/: routes.py
cli/: config.json  keywords.json  result.json  weekly_search.py
db/: database.py  init_db.py  models.py  search_config.py
db/repositories/: app_state.py  base.py  keyword.py  keyword_config.py  paper.py  parper_summary.py  search_config.py  search_result.py
howto/: __init__.py
howto/templates/: howto.html
keyword_tracker/: routes.py
keyword_tracker/templates/: keywords.html
keywords/: __init__.py  routes.py
keywords/templates/: keywords.html
main/: __init__.py  routes.py
main/templates/: index.html  result.html
manual_search/: __init__.py  routes.py
manual_search/templates/: manual_search.html
modules/: bd_operator.py  gemini_operator.py  pubmed_operator.py  pubmed_oprator.py  search_executer.py
search_result/: 2025-11-27-2025-11-29.json  2025-11-29-2025-12-02.json  2025-12-02-2025-12-03.json  2025-12-03-2025-12-05.json  2025-12-05-2025-12-09.json
settings/: __init__.py  config.json  routes.py  settings.json
settings/templates/: keywords_edit.html  keywords_list.html  (+1 more)
templates/: base.html  index.html
viewer/: __init__.py  routes.py
(+18 files in other folders)
